--- a/src/index.html
+++ b/src/index.html
@@ -87,7 +87,7 @@
             </div>
 
             <div class="mb-3">
-              <textarea class="form-control" id="textarea" rows="3" disabled></textarea>
+              <textarea class="form-control" id="textarea" rows="3" disabled  data-testid="textarea"></textarea>
             </div>
 
 
